Fix navbar link svg alignment Fix heading tailwind styles Fix markdown container width Fix home page styles Fix adjustment of Footer

--- a/www/src/css/custom.css
+++ b/www/src/css/custom.css
@@ -19,6 +19,8 @@
   --ifm-color-primary-lighter: #58c9f1;
   --ifm-color-primary-lightest: #72e3ff;
   --ifm-code-font-size: 95%;
+  --ifm-container-width: 1140px;
+  --ifm-container-width-xl: 1320px;
 }
 
 .docusaurus-highlight-code-line {
@@ -113,4 +115,45 @@ article {
 .theme-doc-markdown.markdown table {
   display: table;
   /* width: 100%; */
+}
+
+.navbar-external-link,
+.theme-edit-this-page {
+  @apply flex items-center;
+}
+.footer__item {
+  @apply h-8;
+}
+
+.container {
+  @apply w-full max-w-[var(--ifm-container-width-xl)] mx-auto;
+}
+
+.markdown h1,
+h2,
+h3,
+h4,
+h5 {
+  @apply font-bold mb-1 leading-normal;
+}
+
+.markdown h1 {
+  @apply text-5xl;
+}
+
+.markdown h2 {
+  @apply text-[2rem];
+}
+
+.markdown h3 {
+  @apply text-2xl;
+}
+
+.markdown h4,
+h5 {
+  @apply text-xl;
+}
+
+.admonition-heading h5 {
+  @apply flex items-center text-lg;
 }
